<resources>
    <string name="app_name">Peretz</string>

    <string name="auth_enter_text">Вход</string>
    <string name="auth_introduction_text">Введите номер телефона. Вам придет СМС с кодом подтверждения.</string>
    <string name="auth_text_proceed">Продолжить</string>

    <string name="meal_description_example">Листья романо, маринованное куриное филе, черри, ароматные сухарики,заправленные соусом цезарь, посыпанное стружкой сыра пармезан</string>

    <string name="home_roll_text">Ролл 🎁\nв подарок</string>

    <string name="sale_description_text">С 17 июля по 1 августа во всех кафе Pascucci будет действовать акция, в рамках которой, при любом заказе от 1000 рублей будет прилагаться одна порция роллов на выбор в подарок!</string>
    <string name="sale_order_button_text">Сделать заказ</string>
    <string name="sale_topbar_title_text">Акция</string>

    <string name="bottom_menu_home_tab_title">Главная</string>
    <string name="bottom_menu_card_tab_title">Баланс</string>
    <string name="bottom_menu_notifications_tab_title">Уведомления</string>
    <string name="bottom_menu_profile_tab_title">Профиль</string>
</resources>