<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home_unselected"
        android:title="@string/bottom_menu_home_tab_title" />

    <item
        android:id="@+id/card_fragment"
        android:icon="@drawable/ic_card_unselected"
        android:title="@string/bottom_menu_card_tab_title" />

    <item
        android:id="@+id/notifications_fragment"
        android:icon="@drawable/ic_notifications_unselected"
        android:title="@string/bottom_menu_notifications_tab_title" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_profile_unselected"
        android:title="@string/bottom_menu_profile_tab_title" />
</menu>