<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sale_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/sale_topbar_background"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/sale_topbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/sale_topbar_title_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <include
        layout="@layout/item_sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/sale_description_text"
        android:textColor="@color/sale_description_text"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/white"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@color/sale_button_background"
        android:paddingVertical="15dp"
        android:text="@string/sale_order_button_text"
        android:textAllCaps="false"
        android:textSize="14sp" />

</LinearLayout>